--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "rewrite module loading to minimize loaded code",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "travis:test": "mocha"
   },
   "keywords": [
     "module",
@@ -21,5 +22,8 @@
   },
   "engines": {
     "node": ">=4.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
   }
 }
