--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ branches:
 matrix:
   fast_finish: true
   include:
-  - os: linux
+    - os: linux
+      node_js: "8"
+      env: JOB_PART=lint
     - os: linux
       node_js: "7"
       env: JOB_PART=lint
